--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
       Only the best for you.
     </p>
   </div>
+  <div class="left card">
+    <img src="assets\images\beautiful.jpg">
+    <h2>Beauty</h2>
+    <P>We strive to create the most beautiful websites for all your needs. 
+      Working closely with you to design and develop an 
+      amazing website for your business.
+    </P>
+  </div>
+  <div class="right card">
+    <img src="assets\images\construction.jpg">
+    <h2>Construction</h2>
+    <p>Built by our team of professional developers, we ensure the most 
+      rigourous and modern websites. Built from scratch using HTML and CSS. 
+      Only the best for you.
+    </p>
+  </div>
 </body>
 
 </html>
